--- a/starter/style.css
+++ b/starter/style.css
@@ -13,7 +13,7 @@ img{
     height: 100%;
 }
 body{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter',sans-serif;
 }
 
 
@@ -36,6 +36,26 @@ body{
     background: var( --gray-color);
 
  } 
+
+
+
+
+.logo{
+    margin-bottom: 30px;
+}
+span{
+    color:var(--main-color)
+}
+.line{
+    background: var(--main-color);
+    padding:4px;
+    /* height: 8px; */
+    width: 224px;
+}
+
+.headingwriteup{
+    margin: 30px 0;
+}
  
  .firstsection-rightdiv{
      width: 50%;
@@ -48,9 +68,9 @@ body{
      
 
      
+ }
 
-}
-.link-holder{
+ .link-holder{
     /* border: 3px solid black; */
     display: flex;
     justify-content: space-evenly;
@@ -58,21 +78,6 @@ body{
     padding: 20px 0;
 }
 
-.logo{
-    margin-bottom: 30px;
-}
-span{
-    color:var(--main-color)
-}
-.line{
-    background: var(--main-color);
-    padding:8px;
-    width: 224px;
-}
-
-.headingwriteup{
-    margin: 30px 0;
-}
 
      
  
@@ -90,7 +95,7 @@ span{
     justify-content: center;
     align-items: center;
     padding: 30px 0;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     
     
     
@@ -106,6 +111,7 @@ span{
 .secsection-leftdiv p{
     text-align: left;
     margin: 20px 0;
+    
 }
 
 
@@ -124,11 +130,11 @@ span{
 /* ==== third section start here ==== */
 .thirdsection{
  /* border: var( --black-bolder); */
- padding: 30px o;
+ padding: 30px 0;
  display: flex;
  align-items: center;
  justify-content: center;
- flex-wrap: wrap;
+ /* flex-wrap: wrap; */
     
 
 }
@@ -160,6 +166,28 @@ span{
 
 
 /* ==== footer section start here ==== */
+
+footer{
+    color: var(--whtie-color);
+    background: var(--main-color);
+    padding: 30px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footericons-container{
+    /* height: 100px; */
+    /* border: 3px solid black; */
+    width: 200px;
+    text-align: center;
+}
+
+.footericons{
+    font-size: 25px;
+    margin: 0 5px;
+    
+}
 /* ==== footer section ends here ==== */
 
 
